修改了navigation文件

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,6 +1,17 @@
 header:
   - titles:
       # @start locale config
+      en      : &EN       LeetCode
+      en-GB   : *EN
+      en-US   : *EN
+      en-CA   : *EN
+      en-AU   : *EN
+      zh-Hans : &ZH_HANS  力扣
+      # @end locale config
+    url: /LeetCode.html
+
+  - titles:
+      # @start locale config
       en      : &EN       Archive
       en-GB   : *EN
       en-US   : *EN
